# monitor-hidratacao

./: .gitignore  CMakeLists.txt  README.md  buzzer_module.c  buzzer_module.h  config.h  display_module.c  display_module.h  input_module.c  input_module.h  lwipopts.h  main.c  mqtt_module.c  mqtt_module.h  relatorio_tecnico_hidratacao.html  timer_module.c  timer_module.h
